# SpectrumBrowser

./: .classpath  .gitignore  .project  .pydevproject  Dockerfile  MSODConfig.json  MSODTransferSpec.md  MSODtransferSpec.md  Makefile  NESL7jfj.html  README.md  build.xml
USRPAnalyzer/: README.md  configuration.py  consts.py  parser.py  usrp_analyzer.py  utils.py  webrelay.py
USRPAnalyzer/blocks/: __init__.py  controller_cc.py  marker.py  plotter_f.py  pyplot_sink_f.py  resolution.py  stitch_fft_segments_ff.py  window.py
USRPAnalyzer/blocks/gr-usrpanalyzer/lib/: CMakeLists.txt  bin_statistics_ff_impl.cc  bin_statistics_ff_impl.h  controller_cc_impl.cc  controller_cc_impl.h  qa_usrpanalyzer.cc  qa_usrpanalyzer.h  skiphead_reset_impl.cc  skiphead_reset_impl.h  stitch_fft_segments_ff_impl.cc  stitch_fft_segments_ff_impl.h  test_usrpanalyzer.cc
USRPAnalyzer/gui/: __init__.py  averaging.py  bandwidth.py  delay.py  dwell.py  export.py  frequency.py  gain.py  lotuning.py  main.py  marker.py  power.py  resolution.py  skip.py  span.py  stream.py  threshold.py  trigger.py  window.py
USRPSpectrumSensor/: README.md  dummy.crt  run_sensor.sh  sensor.loc  sensor.sys  spectrum_monitor_file.py  spectrum_monitor_post.py  spectrum_monitor_sslsocket.py
USRPSpectrumSensor/gr-myblocks/: CMakeLists.txt  NIST-CONDITIONS-OF-USE.txt
USRPSpectrumSensor/gr-myblocks/lib/: CMakeLists.txt  bin_aggregator_ff_impl.cc  bin_aggregator_ff_impl.h  bin_statistics_ff_impl.cc  bin_statistics_ff_impl.h  file_descriptor_sink_impl.cc  file_descriptor_sink_impl.h  file_descriptor_source_impl.cc  file_descriptor_source_impl.h  qa_myblocks.cc  qa_myblocks.h  test_myblocks.cc  threshold_timestamp_impl.cc  threshold_timestamp_impl.h
aide/: aide.conf  crontab  runaide.sh
dbmonitor/: ResourceMonitor.py
devel/: README.md  fabfile.py  install_build_tools.sh  install_mongd.sh  install_stack.sh  python_pip_requirements.txt  redhat_stack.txt  requirements.txt  requirements_jkub_ubuntu.txt  ubuntu_stack.txt  yum-install.sh
devel/building/: README.md
devel/certificates/: README.md  cacert.pem  dummy.crt  gencertificates.sh  server.csr
devel/deploy/: Config.gburg.txt  MSODConfig.json.setup  README.md  fabfile.py  fabtargets.py  fabtargets_prod.py  install_build_tools.sh  install_stack.sh  mongod.conf  mongodb-enterprise.repo  mongodb-org-2.6.repo  msod.sudo  python_devel_requirements.txt  python_pip_requirements.txt  redhat_stack.txt  rpmforge.repo  setup-config.py  ubuntu_stack.txt
devel/requirements/: README.md  install_build_tools.sh  install_mongd.sh  install_stack.sh  python_devel_requirements.txt  python_pip_requirements.txt  redhat_stack.txt
devel/scripts/: README.md  clean-db.sh  restart-msod.sh  run-flake8.sh  setup-config-local.py  start-db.sh  start-msod-generate-testcases.sh  start-msod.sh  stop-msod.sh
docker/: startserver.sh
docker/mongo/: Dockerfile
documents/api/: Makefile  README.md  conf.py  index.rst
flask/: AccountLock.py  Accounts.py  AccountsChangePassword.py  AccountsCreateNewAccount.py  AccountsManagement.py  AccountsResetPassword.py  Admin.py  AdminAccounts.py  AdminChangePassword.py  AdminCreateNewAccount.py  AdminResetPassword.py  Bootstrap.py  CleanLogs.py  Config.bldr.txt  Config.gburg.py  Config.gburg.txt  Config.its.py  Config.py  Config_gburg.txt  DataMessage.py  DataStreamSharedState.py  DataStreaming.py  DbCollections.py  DebugFlags.py  Defines.py  EmailDumpUrlToUser.py  GarbageCollect.py  GeneratePowerVsTime.py  GenerateSpectrogram.py  GenerateSpectrum.py  GenerateZipFileForDownload.py  GetAdminInfo.py  GetDailyMaxMinMeanStats.py  GetDataSummary.py  GetLocationInfo.py  GetOneDayStats.py  GetStreamingCaptureOccupancies.py  LocationMessage.py  Log.py  Message.py  (+44 more)
httpd/: README.md  start-httpd.sh
installScripts/: extra_python_requirements_jkub.txt  greetings.txt  ubuntu_install.sh  ubuntu_software.txt
mongodb/: mongod.conf
nginx/: README.md  cacert.pem  dummyprivkey.pem  index.html  nginx.conf  nginx.conf.test  privkey.pem  start-nginx.sh
scripts/: clean-db.sh  restart-gunicorn.sh  restart-msod.sh  start-db.sh  start-gunicorn-generate-testcases.sh  start-gunicorn-run-testcases.sh  start-msod-generate-testcases.sh  start-msod-run-testcases.sh  start-msod.sh  stop-db.sh  stop-gunicorn.sh  stop-msod.sh
services/: README.md  admin-bin  admin-init  gunicorn-init  monitoring-bin  monitoring-init  msod-init  occupancy-bin  occupancy-init  spectrumbrowser-defaults  spectrumbrowser-init  streaming-bin  streaming-init
unit-tests/: Accounts.bldr.txt  BootstrapPythonPath.py  Boulder_test_Setup  Config.bldr.txt  Config.gburg.txt  Config.unittest.txt  Config_bldr_unittest.txt  E6R16W5XS.config.json  E6R16W5XS1.config.json  ECR16W4XS.config.json  Norfolk.config.json  NorfolkTest.config.json  NorfolkTestSample.txt  README.md  Sensors.bldr.txt  TestSensor.config.json  plot-alert-timings.py  pulse-timing.out  sensor.event  setup-test-sensors-defs.py  setup-test-sensors.py  setup_test_sensors.py  setup_test_sensors_defs.py  test-add-inbound-peer.py  test-admin-logging.py  test-admin-verify-token.py  test-arm-sensor.py  test-config.py  test-create-destroy-sensor.py  test-delete-capture.py  test-disconnect-sensor.py  test-es-sensor-config.py  test-get-capture-events.py  test-get-debug-flags.py  test-get-frequency-bands.py  test-get-last-acquisition-timestamp.py  test-get-last-acquisition-timestamp.sh  test-get-last-system-message.py  test-get-logs.py  test-get-sensor-config.py  (+31 more)
war/: .SpectrumBrowserStyle.css.swp  SpectrumBrowser.html  SpectrumBrowserStyle.css
(+422 files in other folders)
